--- a/index.html
+++ b/index.html
@@ -4,10 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boyd Delfin | Web Developer</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="gradient-bg">
+        <span class="gradient-1"></span>
+        <span class="gradient-2"></span>
+        <span class="gradient-3"></span>
+    </div>
+    <section id="main-wrapper" class="glass-blur">
+        <div class="profile">
+            <header>
+                <div class="account">
+                    <div class="profile-img"><img src="favicon.png" alt="Boyd Delfin Logo" width="25"></div>
+                    <div class="profile-name">
+                        <h1>boyd.delfin</h1>
+                    </div>
+                </div>
+                <div class="social">
+                    <a href="https://www.facebook.com/boyd.delfin" target="_blank" rel="noreferrer"><img src="facebook.svg" alt="facebook logo" width="20"></a>
+                    <a href="https://github.com/boyddelfin" target="_blank" rel="noreferrer"><img src="github.svg" alt="github logo" width="20"></a>
+                </div>
+            </header>
+            <div id="content">
+                <div id="sidebar">
+                    <div class="about-me sub-content">
+                        <img src="https://avatars.githubusercontent.com/u/109784361?v=4" alt="Boyd Delfin" width="80">
+                        <h2>Boyd Delfin</h2>
+                        <h3>Web Developer</h3>
+                        <p>2018 - Present</p>
+                    </div>
+                    <div class="tech-stack sub-content">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JS</span>
+                        <span>PHP</span>
+                        <span>DART</span>
+                        <span>JSON</span>
+                    </div>
+                    <div class="tech-stack sub-content">
+                        <span>WP</span>
+                        <span>ReactJS</span>
+                        <span>Flutter</span>
+                    </div>
+                    <div class="dev-tools sub-content">
+                        <div>Photoshop</div>
+                        <div>Illustrator</div>
+                        <div>Figma</div>
+                        <div>Chrome</div>
+                        <div>Firefox</div>
+                        <div>GTMetrix</div>
+                        <div>LightHouse</div>
+                        <div>Google Analytics</div>
+                        <div>Search Console</div>
+                        <div>Github Pages</div>
+                        <div>VSCode</div>
+                        <div>Android Studio</div>
+                        <div>Sublime</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
