--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                         <span>CSS</span>
                         <span>JS</span>
                         <span>PHP</span>
+                        <span>MySQL</span>
                         <span>DART</span>
                     </div>
                     <div class="tech-stack sub-content">
