--- a/index.html
+++ b/index.html
@@ -9,66 +9,46 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <div class="gradient-bg">
-        <span class="gradient-1"></span>
-        <span class="gradient-2"></span>
-        <span class="gradient-3"></span>
+    <div class="preloader">
+        <img src="favicon.png" alt="logo" width="40">
     </div>
-    <section id="main-wrapper" class="glass-blur">
-        <div class="profile">
-            <header>
-                <div class="account">
-                    <div class="profile-img"><img src="favicon.png" alt="Boyd Delfin Logo" width="25"></div>
-                    <div class="profile-name">
-                        <h1>boyd.delfin</h1>
-                    </div>
-                </div>
-                <div class="social">
-                    <a href="https://www.facebook.com/boyd.delfin" target="_blank" rel="noreferrer"><img src="facebook.svg" alt="facebook logo" width="20"></a>
-                    <a href="https://github.com/boyddelfin" target="_blank" rel="noreferrer"><img src="github.svg" alt="github logo" width="20"></a>
-                </div>
-            </header>
-            <div id="content">
-                <div id="sidebar">
-                    <div class="about-me sub-content">
-                        <img src="https://avatars.githubusercontent.com/u/109784361?v=4" alt="Boyd Delfin" width="80">
-                        <h2>Boyd Delfin</h2>
-                        <h3>Web Developer</h3>
-                        <p>2018 - Present</p>
-                    </div>
-                    <div class="tech-stack sub-content">
-                        <span>HTML</span>
-                        <span>CSS</span>
-                        <span>JS</span>
-                        <span>PHP</span>
-                        <span>MySQL</span>
-                        <span>DART</span>
-                    </div>
-                    <div class="tech-stack sub-content">
-                        <span>WP</span>
-                        <span>ReactJS</span>
-                        <span>Flutter</span>
-                    </div>
-                    <div class="dev-tools sub-content">
-                        <div>Photoshop</div>
-                        <div>Illustrator</div>
-                        <div>Figma</div>
-                        <div>Chrome</div>
-                        <div>Firefox</div>
-                        <div>GTMetrix</div>
-                        <div>LightHouse</div>
-                        <div>Google Analytics</div>
-                        <div>Search Console</div>
-                        <div>Github Pages</div>
-                        <div>VSCode</div>
-                        <div>Android Studio</div>
-                        <div>Sublime</div>
-                    </div>
-                </div>
+    <div class="gradient-bg"></div>
+    <div class="wrapper">
+        <header>
+            <div class="logo">
+                <a href="#"><img src="favicon.png" alt="boyd.delfin"></a>
             </div>
-        </div>
-    </section>
+            <nav>
+                <ul>
+                    <li><a href="#" class="active">About</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="social">
+                <ul>
+                    <li><a href="#"><img src="facebook.svg" alt="facebook"></a></li>
+                    <li><a href="#"><img src="github.svg" alt="github"></a></li>
+                </ul>
+            </div>
+        </header>
+        <section id="section-1">
+            <div class="mac-desktop">
+                <h1><span>B</span><span>O</span><span>Y</span><span>D</span> <span>D</span><span>E</span><span>L</span><span>F</span><span>I</span><span class="trigger-0">N</span></h1>
+                <h2>WEB DEVELOPER</h2>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JS</li>
+                    <li>PHP</li>
+                    <li>MySQL</li>
+                    <li>DART</li>
+                </ul>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
