New Project Boyd's Command Room

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boyd Delfin | Web Developer</title>
+    <title>Boyd's Command Room</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,43 +12,18 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div class="preloader">
-        <img src="favicon.png" alt="logo" width="40">
+<div class="preloader"><img src="favicon.png" alt="logo" width="40"></div>
+<div class="wrapper">
+    <div id="command-output"></div>
+    <div id="command-line">
+        <div class="cmd-logo">
+            <img src="favicon.png" alt="Boyd's Website Logo" width="30" height="30">
+        </div>
+        <div class="cmd-input-wrapper">
+            <span>>:</span>
+            <input type="text" class="cmd-input" placeholder="Enter a Command">
+        </div>
     </div>
-    <div class="gradient-bg"></div>
-    <div class="wrapper">
-        <header>
-            <div class="logo">
-                <a href="#"><img src="favicon.png" alt="boyd.delfin"></a>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#" class="active">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="social">
-                <ul>
-                    <li><a href="#"><img src="facebook.svg" alt="facebook"></a></li>
-                    <li><a href="#"><img src="github.svg" alt="github"></a></li>
-                </ul>
-            </div>
-        </header>
-        <section id="section-1">
-            <div class="mac-desktop">
-                <h1><span>B</span><span>O</span><span>Y</span><span>D</span> <span>D</span><span>E</span><span>L</span><span>F</span><span>I</span><span class="trigger-0">N</span></h1>
-                <h2>WEB DEVELOPER</h2>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JS</li>
-                    <li>PHP</li>
-                    <li>MySQL</li>
-                    <li>DART</li>
-                </ul>
-            </div>
-        </section>
-    </div>
+</div>
 </body>
 </html>
