Added version control

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 <div class="preloader"><img src="favicon.png" alt="logo" width="40"></div>
 <div class="wrapper">
+    <div class="version">v1.0.0</div>
     <div id="command-output"></div>
     <div id="command-line">
         <div class="cmd-logo">
