Added Command Button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <span>>:</span>
             <input type="text" class="cmd-input" placeholder="Enter a Command">
         </div>
+        <div class="cmd-submit-wrapper">
+            <button>SEND</button>
+        </div>
     </div>
 </div>
 </body>
