--- a/index.html
+++ b/index.html
@@ -3,34 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boyd CMD Bot</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <title>Boyd Delfin - Web Developer</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="description" content="Hi!, I'm Boyd Delfin a web developer and this is my portfolio. Feel free to contact me if you need my web development services">
+    <link rel="shortcut icon" href="/assets/images/2025/favicon.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-<div class="preloader"><img src="favicon.png" alt="logo" width="40"></div>
-<div class="wrapper">
-    <div class="version">
-        <span>Command Bot</span>
-        <span>v1.0.0</span>
+<div class="preloader"><img src="/assets/images/favicon.png" alt="logo" width="40"></div>
+<header id="main-header">
+    <div class="wrapper">
+        <div class="row">
+            <div class="col">
+                <a href="/" class="website-logo">
+                    <img src="/assets/images/2025/logo.svg" alt="Boyd Logo" width="100">
+                </a>
+            </div>
+            <div class="col">
+                <nav>
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Tech Stack</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Reviews</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </div>
-    <div id="command-output"></div>
-    <div id="command-line">
-        <div class="cmd-logo">
-            <img src="favicon.png" alt="Boyd's Website Logo" width="30" height="30">
-        </div>
-        <div class="cmd-input-wrapper">
-            <span>>:</span>
-            <input type="text" class="cmd-input" placeholder="Enter a Command">
-        </div>
-        <div class="cmd-submit-wrapper">
-            <button>SEND</button>
-        </div>
-    </div>
-</div>
+</header>
+<main id="main-content">
+    <article>
+        <section id="b-sec-1" class="sec-dark">
+            <div class="wrapper">
+                <div class="row">
+                    <div class="col">
+                        <div class="content">
+                            <img src="/assets/images/2025/boyddelfin.jpg" alt="Boyd Delfin" width="180">
+                            <h4>Hi! I'm Virgilio Delfin Jr.</h4>
+                            <h1>WordPress <span class="gradient-highlight">Website Developer</span> based in Philippines.</h1>
+                            <p>I am a <b>wordpress website developer</b> in Bacolod City, PH with 5 years of experience in making small to large websites.</p>
+                            <div class="buttons">
+                                <a href="#" class="btn btn-primary">Hire Me</a>
+                                <a href="#" class="btn btn-secondary">View Resume</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="b-sec-2" class="sec-light">
+            <div class="wrapper">
+                <div class="row">
+                    <div class="col">
+                        <div class="content">
+                            <h2>Tech Stack</h2>
+                            <p>I am using this technologies to create awesome and functional websites.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </article>
+</main>
+<footer id="main-footer">
+
+</footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="/assets/js/script.js"></script>
 </body>
 </html>
