--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
                     <ul>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Tech Stack</a></li>
-                        <li><a href="#">Services</a></li>
                         <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Reviews</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
@@ -47,8 +45,8 @@
                         <div class="content">
                             <img src="/assets/images/2025/boyddelfin.jpg" alt="Boyd Delfin" width="180">
                             <h4>Hi! I'm Virgilio Delfin Jr.</h4>
-                            <h1>WordPress <span class="gradient-highlight">Website Developer</span> based in Philippines.</h1>
-                            <p>I am a <b>wordpress website developer</b> in Bacolod City, PH with 5 years of experience in making small to large websites.</p>
+                            <h1><span class="gradient-highlight">Website Developer</span> based in Philippines.</h1>
+                            <p>I am a web developer in Bacolod City, PH with five years of proven experience in building a diverse range of websites, from small business sites to complex web applications.</p>
                             <div class="buttons">
                                 <a href="#" class="btn btn-primary">Hire Me</a>
                                 <a href="#" class="btn btn-secondary">View Resume</a>
@@ -64,7 +62,31 @@
                     <div class="col">
                         <div class="content">
                             <h2>Tech Stack</h2>
-                            <p>I am using this technologies to create awesome and functional websites.</p>
+                            <p>I utilize these technologies to build impressive and functional websites.</p>
+                            <div class="logos">
+                                <img src="/assets/images/2025/tech/wordpress-logo.png" alt="WordPress" title="WordPress">
+                                <img src="/assets/images/2025/tech/php.png" alt="PHP" title="PHP">
+                                <img src="/assets/images/2025/tech/html-5.png" alt="HTML" title="HTML">
+                                <img src="/assets/images/2025/tech/css-3.png" alt="CSS" title="CSS">
+                                <img src="/assets/images/2025/tech/js.png" alt="Javascript" title="Javascript">
+                                <img src="/assets/images/2025/tech/social.png" alt="jQuery" title="jQuery">
+                                <img src="/assets/images/2025/tech/api.png" alt="API" title="API">
+                                <img src="/assets/images/2025/tech/photoshop.png" alt="Photoshop" title="Photoshop">
+                                <img src="/assets/images/2025/tech/figma.png" alt="Figma" title="Figma">
+                                <img src="/assets/images/2025/tech/google-analytics.png" alt="Analytics" title="Google Analytics">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="b-sec-3" class="sec-light-2">
+            <div class="wrapper">
+                <div class="row">
+                    <div class="col">
+                        <div class="content">
+                            <h2>My Portfolio</h2>
+                            <p>A collection of my web design and development projects, demonstrating my passion for creating user-centered and visually appealing online experiences.</p>
                         </div>
                     </div>
                 </div>
